interest image not showing fix

--- a/pf.css
+++ b/pf.css
@@ -1,13 +1,15 @@
 *{
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 body{
     background-color: #000900;
+   
 }
 a{
     color: inherit;
-    text-decoration: none;
+    text-decoration: none;  
 }
 header{
     display: flex;
@@ -33,10 +35,13 @@ header>div>ul{
     list-style: none;
     margin-right: 100px;
     font-size: 20px;
+
 }
-header>div>ul>li:hover{
+
+header>div>ul>a>li:hover{
     color: #5BB653;
     cursor: pointer;
+    
 }
 .profile-image-wrapper{
     position: absolute;
@@ -142,6 +147,7 @@ header>div>ul>li:hover{
     line-height: 53px;
     text-align: center;
     margin-top: 100px;
+    
 }
 .aboutme-heading>span{
     color: #5BB653;
@@ -748,6 +754,10 @@ footer>span{
 }
 
 @media screen and  (max-width:480px) and (min-width:300px) {
+    *{
+        margin: 0;
+        padding: 0;
+    }
 
     .website{
         font-size: 15px;
@@ -962,5 +972,77 @@ footer>span{
         border-top: 1.5px solid white;
         padding-top: 20px;
     }
+}
+@media screen and  (max-width:768px) and (min-width:481px){
 
+    .website{
+        font-size: 15px;
+    }
+    header>div>ul{
+        font-size: 15px;
+        gap: 8px;
+        margin: 0;
+    }
+    .main-container{
+        display: flex;
+        justify-content: space-between;
+
+    }
+    .text{
+        font-size: 20px;
+        margin-right: 0px;
+        margin-top: 50px;
+        margin-left: 30px;
+        /* width: 50%; */
+        line-height: 1;
+    }
+    #subham{
+        font-size: 25px;
+        line-height: 2;
+    }
+    #biratnagar{
+        font-size: 20px;
+        /* line-height: 1; */
+    }
+    .icon-wrapper{
+        margin-left: 30px;
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .icon{
+        width: 25px;
+        height: 25px;
+        font-size: 10px;
+        border-color: #000900;
+        color: #5bb653;
+        box-shadow: 0px 0px 7px 5px #5bb653;
+    }
+    .profile-image-wrapper{
+        /* position: absolute; */
+        right: 0px;
+        top: 30px;
+        width: 50%;
+    }
+    .box-text-rotation{
+        display: none;
+    }
+    .about-section{
+        display: flex;
+        justify-content: space-between;
+
+    }
+    .about-image-wrapper{
+        margin-left: 20px;
+    }
+    .card-wrapper{
+       flex-wrap: wrap;
+       height: 100%;
+    }
+    .card{
+        width: 200px;
+        height: 170px;
+    }
+    .card.content>.details>.heading{
+        font-size: 13px
+    }
 }
